--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
     "googleapis": "^51.0.0",
+    "m3u8stream": "*",
+    "miniget": "*",
     "node-fetch": "^2.6.1",
+    "opus": "^0.0.0",
+    "opusscript": "^0.0.7",
+    "prism-media": "^1.2.3",
     "request": "^2.88.2",
-    "ytdl-core": "^4.4.3"
+    "ytdl-core": "*",
+    "ytdl-core-discord": "^1.2.5"
   },
   "repository": {
     "type": "git",
