--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "removeComments": true,
     "target": "es6",
     "lib": [ "es6" ],
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules"
