--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ obj
 *.js.map
 
 # program generated
-config.json
 release
 files
 imgs
@@ -22,3 +21,4 @@ imgs
 *.jpg
 *.pdf
 *.txt
+config/config.json
