wiping dust off
renamed "app_code" to "src"
use of message wrapper whenever it is possible
added dependencies to improve performance (as stated by discord.js main page).
general corrections if needed.

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "/",
     "authorizedusers": [
-        "psyKomicron#6527", "desmoclublyon#3056", "marquez#5719", "Onyxt#9305"
+        "psyKomicron#6527", "desmoclublyon#3056", "marquez#5719", "Onyxt#9305", "ExoNugget#5151"
         ],
     "verbose": 3,
     "startdirectories": [
