--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
+    "@discordjs/opus": "^0.5.0",
+    "bufferutil": "^4.0.3",
     "cheerio": "^1.0.0-rc.5",
     "core-js": "^3.8.3",
     "discord.js": "^12.5.1",
+    "erlpack": "github:discord/erlpack",
     "ffmpeg-static": "^4.2.7",
     "googleapis": "^51.0.0",
+    "libsodium-wrappers": "^0.7.9",
     "m3u8stream": "*",
     "miniget": "*",
     "node-fetch": "^2.6.1",
-    "opus": "^0.0.0",
-    "opusscript": "^0.0.7",
+    "opusscript": "^0.0.8",
     "prism-media": "^1.2.3",
     "request": "^2.88.2",
+    "utf-8-validate": "^5.0.4",
     "ytdl-core": "*",
-    "ytdl-core-discord": "^1.2.5"
+    "ytdl-core-discord": "^1.2.5",
+    "zlib-sync": "^0.1.7"
   },
   "repository": {
     "type": "git",
