--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.5.1",
     "erlpack": "github:discord/erlpack",
     "ffmpeg-static": "^4.2.7",
+    "google-auth-library": "^6.1.6",
     "googleapis": "^51.0.0",
     "libsodium-wrappers": "^0.7.9",
     "m3u8stream": "*",
